# block-mesh-rs

./: .gitignore  Cargo.toml  LICENSE.Apache-2.0  README.md
bench/: Cargo.toml
bench/.github/workflows/: ci.yml
bench/src/: bench.rs
examples-crate/: Cargo.toml  README.md
examples-crate/render/: main.rs
examples-crate/uv_mapping/: main.rs
src/: axis.rs  bounds.rs  buffer.rs  face.rs  geometry.rs  greedy.rs  lib.rs  quad.rs  simple.rs
src/geometry/: axis.rs  face.rs  quad.rs
src/greedy/: merge_strategy.rs
