[package]
name = "block-mesh"
description = "Fast algorithms for generating voxel block meshes from arrays."
version = "0.1.0"
repository = "https://github.com/bonsairobo/block-mesh-rs"
keywords = ["graphics", "mesh", "voxel"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ilattice = "0.1"

[dependencies.ndcopy]
git = "https://github.com/dcz-self/ndcopy-rs"
rev = "499d9b3"

[dependencies.ndshape]
git = "https://github.com/bonsairobo/ndshape-rs"
rev = "d184932"
