[package]
name = "block-mesh-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
#bevy = { version = "0.11", default-features = false, features = ["bevy_winit", "bevy_render", "bevy_asset", "bevy_pbr",  "png", "x11"] }
# Not sure why the above doesn't work, but we can't configure the StandardMaterial in the examples then
bevy = { version = "0.11" }


[dependencies.block-mesh]
path = ".."

[[example]]
name = "render"
path = "render/main.rs"

[[example]]
name = "uv_mapping"
path = "uv_mapping/main.rs"
